# Techluster

./: .gitignore  CMakeLists.txt  README.md  bootstrap.ps1  bootstrap.sh  i18n.json  utils.cmake  vcpkg.json
.github/workflows/: release.yml
Connect/: CMakeLists.txt  main.cc
Connect/controllers/: Allocator.cc  Allocator.h  HeartBeat.cc  HeartBeat.h  Heartbeat.cc  Heartbeat.h  Monitor.cc  Monitor.h  Node.cc  Node.h
Connect/filters/: HeartBeatReport.cc  HeartBeatReport.h  NodeCheck.cc  NodeCheck.h  NodeReport.cc  NodeReport.h
Connect/plugins/: Configurator.cc  Configurator.h  NodeManager.cc  NodeManager.h
Connect/services/: Allocator.cc  Allocator.h  HeartBeat.cc  HeartBeat.h  Monitor.cc  Monitor.h
Connect/structures/: NodeServer.cc  NodeServer.h
Forwarding/: CMakeLists.txt  main.cc
Forwarding/controllers/: Forwarding.cc  Forwarding.h  Manage.cc  Manage.h
Forwarding/filters/: ManageCreate.cc  ManageCreate.h  ManageRemove.cc  ManageRemove.h
Forwarding/plugins/: HandlerManager.cc  TransmissionManager.cc  TransmissionManager.h
Forwarding/strategies/: TransmissionBroadcast.cc  TransmissionBroadcast.h  TransmissionJoin.cc  TransmissionJoin.h  TransmissionLeave.cc  TransmissionLeave.h
Forwarding/structures/: Transmission.cc  Transmission.h  Transmitter.cc  Transmitter.h
Forwarding/types/: Action.h
Gaming/: CMakeLists.txt  main.cc
Gaming/controllers/: Gaming.cc  Gaming.h  Room.cc  Room.h
Gaming/plugins/: AuthMaintainer.cc  AuthMaintainer.h  HandlerManager.cc  HandlerManager.h  RoomManager.cc  RoomManager.h
Gaming/services/: Gaming.cc  Gaming.h  Room.cc  Room.h
Gaming/strategies/: Action.h  PlayerConfig.cc  PlayerConfig.h  PlayerFinish.cc  PlayerFinish.h  PlayerGroup.cc  PlayerGroup.h  PlayerPing.cc  PlayerPing.h  PlayerReady.cc  PlayerReady.h  PlayerRole.cc  PlayerRole.h  PlayerState.cc  PlayerState.h  PlayerType.cc  PlayerType.h  RoomCreate.cc  RoomCreate.h  RoomData.cc  RoomData.h  RoomDataGet.cc  RoomDataGet.h  RoomDataUpdate.cc  RoomDataUpdate.h  RoomInfo.cc  RoomInfo.h  RoomInfoGet.cc  RoomInfoGet.h  RoomInfoUpdate.cc  RoomInfoUpdate.h  RoomJoin.cc  RoomJoin.h  RoomKick.cc  RoomKick.h  RoomLeave.cc  RoomLeave.h  RoomList.cc  RoomList.h  RoomPassword.cc  (+3 more)
Gaming/structures/: Player.cc  Player.h  RedisHelper.cc  RedisHelper.h  Room.cc  Room.h
Gaming/types/: Action.h
Message/: CMakeLists.txt  main.cc
Shared/: CMakeLists.txt
Shared/controllers/: BaseWebsocket.h
Shared/filters/: CheckAccessToken.cc  CheckAccessToken.h  CheckCredential.cc  CheckCredential.h  CheckNodeType.cc  CheckNodeType.h  IdentifyUser.cc  IdentifyUser.h  VerifyGamingNode.cc  VerifyGamingNode.h
Shared/helpers/: BasicJson.cc  BasicJson.h  DataJson.cc  DataJson.h  EmailHelper.cc  EmailHelper.h  I18nHelper.h  LuaHelper.cc  LuaHelper.h  MessageJson.cc  MessageJson.h  RedisHelper.cc  RedisHelper.h  RequestJson.cc  RequestJson.h  ResponseJson.cc  ResponseJson.h
Shared/plugins/: AuthMaintainer.cc  AuthMaintainer.h  Authorizer.cc  Authorizer.h  ConnectionManager.cc  ConnectionManager.h  NodeMaintainer.cc  NodeMaintainer.h  Perfmon.cc  Perfmon.h
Shared/services/: BaseWebsocket.h
Shared/structures/: BasicPlayer.cc  BasicPlayer.h  ExceptionHandlers.cc  ExceptionHandlers.h  Exceptions.cc  Exceptions.h  HandlerFactory.h  HandlerManagerBase.h  JsonHelper.cc  JsonHelper.h  MessageHandler.h  MessageHandlerBase.h  NodeServer.cc  NodeServer.h
Shared/types/: JsonValue.h  MessageType.h  NetEndian.cc  NetEndian.h  NodeType.h  Permission.h  ResultCode.h  TcpState.h
Shared/utils/: crypto.cc  crypto.h  data.cc  data.h  datetime.cc  datetime.h  http.cc  http.h  io.cc  io.h  serializer.cc  serializer.h  websocket.cc  websocket.h
Test/: CMakeLists.txt  main.cc
Test/plugins/: BaseTester.cc  BaseTester.h  BotTester.cc  BotTester.h  Configurator.cc  ConnectTester.cc  ConnectTester.h  ForwardingTester.cc  ForwardingTester.h  GamingTester.cc  GamingTester.h  MessageTester.cc  MessageTester.h  TransferTester.cc  TransferTester.h  UserTester.cc  UserTester.h  WorkshopTester.cc  WorkshopTester.h
Transfer/: CMakeLists.txt  main.cc
User/: CMakeLists.txt  main.cc  verifyEmail.html
User/controllers/: Auth.cc  Auth.h  User.cc  User.h
User/filters/: AuthDeactivateEmail.cc  AuthDeactivateEmail.h  AuthLoginEmail.cc  AuthLoginEmail.h  AuthMigrateEmail.cc  AuthMigrateEmail.h  AuthResetEmail.cc  AuthResetEmail.h  AuthRestoreRemoved.cc  AuthRestoreRemoved.h  AuthSearchRemoved.cc  AuthSearchRemoved.h  AuthVerifyEmail.cc  AuthVerifyEmail.h  CheckAccessToken.cc  CheckAccessToken.h  CheckDataField.cc  CheckDataField.h  CheckRefreshToken.cc  CheckRefreshToken.h  CheckUserId.cc  CheckUserId.h  EmailCoolDown.cc  EmailCoolDown.h  EmailThreshold.cc  EmailThreshold.h  IpCoolDown.cc  IpCoolDown.h  IpThreshold.cc  IpThreshold.h  UserGetData.cc  UserGetData.h  UserUpdateData.cc  UserUpdateData.h  UserUpdateInfo.cc  UserUpdateInfo.h  ValidateField.cc  ValidateField.h
User/models/: Data.cc  Data.h  Player.cc  Player.h  Removed.cc  Removed.h
User/plugins/: Configurator.cc  Configurator.h  DataManager.cc  DataManager.h  EmailHelper.cc  EmailHelper.h  PlayerManager.cc  PlayerManager.h
User/services/: Auth.cc  Auth.h  User.cc  User.h
User/structures/: DataField.h  RedisHelper.cc  RedisHelper.h  RedisToken.cc  RedisToken.h  UserRedis.cc  UserRedis.h
User/types/: DataField.h
WebTest/: Connect-example.http  User-example.http  http-client.env.json
WebTest/Connect/: Allocator.http  Heartbeat.http  Monitor.http
WebTest/User/: Auth.http  User.http
Workshop/: CMakeLists.txt  main.cc
